Правки: - добавлен Readme.md - добавлены cursor: pointer`ы - удален slider

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>PINOCCHIO</title>
+	<link rel="shortcut icon" href="./images/intro-barrel.png" type="image/x-icon">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Tenor+Sans&display=swap"
@@ -150,41 +151,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide">
-							<div class="products__item products__col">
-								<img class="products__img" src="images/products-2.jpg" alt="продукт">
-								<p class="products__desc">
-									Миндальный кекс
-								</p>
-								<div class="products__buy">
-									<p class="products__buy-price">
-										240
-									</p>
-									<img class="products__buy-sign" src="images/products-sign.svg">
-									<img class="products__buy-basket" src="images/products-basket.svg">
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="products__item products__col">
-								<img class="products__img" src="images/products-3.jpg" alt="продукт">
-								<p class="products__desc">
-									Яблочный пай
-								</p>
-								<div class="products__buy">
-									<p class="products__buy-price">
-										250
-									</p>
-									<img class="products__buy-sign" src="images/products-sign.svg">
-									<img class="products__buy-basket" src="images/products-basket.svg">
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="products__navigation">
-						<img class="products-button-prev" src="images/arrow-left.svg">
-						<div class="swiper-pagination"></div>
-						<img class="products-button-next" src="images/arrow-right.svg">
 					</div>
 				</div>
 				<div class="products__mobile">
@@ -249,41 +215,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="products__column">
-							<div class="products__item">
-								<img class="products__img" src="images/products-2.jpg" alt="продукт">
-								<p class="products__desc">
-									Миндальный кекс
-								</p>
-								<div class="products__buy">
-									<p class="products__buy-price">
-										240
-									</p>
-									<img class="products__buy-sign" src="images/products-sign.svg">
-									<img class="products__buy-basket" src="images/products-basket.svg">
-								</div>
-							</div>
-						</div>
-						<div class="products__column">
-							<div class="products__item">
-								<img class="products__img" src="images/products-3.jpg" alt="продукт">
-								<p class="products__desc">
-									Яблочный пай
-								</p>
-								<div class="products__buy">
-									<p class="products__buy-price">
-										250
-									</p>
-									<img class="products__buy-sign" src="images/products-sign.svg">
-									<img class="products__buy-basket" src="images/products-basket.svg">
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
-				<button class="products__btn btn-reset">
-					ВСЕ ДЕССЕРТЫ
-				</button>
 			</div>
 		</section>
 
